# team-make-slack-bot

./: .gitignore  Dockerfile  README.md  dedenziBot.py  divide.py  endMessage.py  endMessageByReaction.py  endMessage_comment.py  getReaction.py  makeTeamMessage.py  postMessageTest.py  properties.py  pyproject.toml  requirements.txt  startMessage.py
app/: main.py
app/api/routes/: api.py
app/services/: dedenziBot.py  divide.py  makeTeamMessage.py  startMessage.py
